[package]
name = "areaportal2d"
version = "0.1.0"
authors = ["Nyeogmi <economicsgmail@gmail.com>"]
description = "data structures for worlds with area portals"
readme = "README.md"
homepage = "https://github.com/nyeogmi/areaportal2d"
repository = "https://github.com/nyeogmi/areaportal2d"
license = "MIT OR Apache-2.0"
# TODO, keywords, categories?
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gridd-euclid = "0.1.0"
moogle = "0.4.2"
euclid = "0.22"
symmetric-shadowcasting = "0.2.0"